# redox_benchmark

./: .gitignore  README.md  pyproject.toml
redox/scripts/: calc_redox.py
redox/utils/: mlip_utils.py  pyscf_utils.py  run_crest.py
